[package]
name = "ckb-indexer"
version = "0.2.0"
authors = ["quake <quake.wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rocksdb = { package = "ckb-rocksdb", version = "=0.15.1" }
ckb-types = "0.40.0"
ckb-jsonrpc-types = "0.40.0"
jsonrpc-core = "17.0"
jsonrpc-core-client = { version = "17.0", features = ["http", "tls"] }
jsonrpc-derive = "17.0"
jsonrpc-http-server = "17.0"
jsonrpc-server-utils = "17.0"
futures = "0.3"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }

[dev-dependencies]
tempfile = "3.0"
rand = "0.6"
