[package]
name = "ckb-indexer"
version = "0.4.2"
authors = ["quake <quake.wang@gmail.com>"]
edition = "2018"
description = "The ckb indexer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rocksdb = { package = "ckb-rocksdb", version = "=0.16.0" }
ckb-types = ">=0.100.0"
ckb-jsonrpc-types = ">=0.100.0"
jsonrpc-core = "18.0"
jsonrpc-core-client = { version = "18.0", features = ["http", "tls"] }
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-server-utils = "18.0"
futures = "0.3"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
version-compare = "0.0.11"
rhai = { version = "1.8.0", features = ["no_function", "no_float", "no_module"]}
numext-fixed-uint = "0.1"

[dev-dependencies]
tempfile = "3.0"
rand = "0.6"
